# sonar

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md
.github/workflows/: semble-sync.yml
benchmarks/: README.md  parity_test.py  token_efficiency.py
crates/cli/: Cargo.toml
crates/cli/agents/: sonar-search.md
crates/cli/src/: main.rs
crates/cli/tests/: integration_index.rs
crates/core/: Cargo.toml
crates/core/src/: ann.rs  bm25.rs  chunk.rs  embed.rs  index.rs  lib.rs  persist.rs  rank.rs  search.rs  stats.rs  tokens.rs  types.rs  utils.rs  walk.rs  watch.rs
crates/core/src/rank/: boost.rs  penalty.rs  weight.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: main.rs
docs/: BENCH.md
