[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/ooboai/sonar"
description = "Fast hybrid code search for agents. Pure Rust, drop-in MCP-compatible with semble."

[workspace.dependencies]
sonar-core = { path = "crates/core" }
sonar-mcp = { path = "crates/mcp" }

# Chunking
tree-sitter = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"

# Embeddings
model2vec-rs = "0.2"

# BM25 / search
ordered-float = "5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Hashing
blake3 = "1"

# Utilities
dirs = "6"
ignore = "0.4"
regex = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

# File watching
notify = "7"
ctrlc = "3"
