[package]
name = "sonar-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for sonar code search."

[[bin]]
name = "sonar"
path = "src/main.rs"

[dependencies]
sonar-core.workspace = true
clap.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ctrlc.workspace = true

[dev-dependencies]
tempfile = "3"
